--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ hs_err_pid*
 replay_pid*
 
 tipos-variaveis/.vscode/settings.json
+java-terminal/.vscode/launch.json
+java-terminal/.vscode/settings.json
