--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ replay_pid*
 tipos-variaveis/.vscode/settings.json
 java-terminal/.vscode/launch.json
 java-terminal/.vscode/settings.json
+/.metadata/
